--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
   "moduleResolution": "NodeNext",
   "outDir": "dist",
   "rootDir": "src",
+  "typeRoots": ["./src/types", "./node_modules/@types"],
+
   "strict": true,
   "compilerOptions": {
     "esModuleInterop": true,
